Termino primeira parte do projeto

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="BodyB">
+    <app-header></app-header>
+    <div style="height: 130px;">
+
+    </div>
+    <app-section-carrossel></app-section-carrossel>
+    <app-section-conteudo></app-section-conteudo>
+    <app-footer></app-footer>
+</div>
