--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,1 +1,153 @@
-<p>cadastro works!</p>
+<div class="bodyC">
+    <app-header></app-header>
+
+    <div style="height: 140px;">
+
+    </div>
+
+        <section>
+          <div *ngIf="alert" class="alert alert-primary alert-dismissible fade show" role="alert">
+            <strong>DADOS ENVIADOS COM SUCESSO</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+            <form class="formZ mb-2"  [formGroup]="turma7cForm" #formDir="ngForm">
+                <div class="form-group row">
+                  <label for="nome" class="col-sm-2 col-form-label">Nome</label>
+                  <div class="col-sm-10">
+                    <input type="text" 
+                    class="form-control" 
+                    id="inputNome" 
+                    placeholder="Nome" 
+                    formControlName="nome" 
+                    required>
+                  </div>
+                  <small *ngIf="nome.invalid && formDir.submitted " class="validation-error" >
+                    <p *ngIf="nome.errors?.['required']">O nome é obrigatório.</p>
+                  </small>
+
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" ngValue="true" id="defaultCheck1"
+                  (click)="onClik()">
+                  <label class="form-check-label" for="defaultCheck1">
+                    <p>Nickname</p>
+                  </label>
+                </div>
+
+                <div class="form-group row" *ngIf="checkboxValue">
+                  <label for="nickname" class="col-sm-2 col-form-label">Nickname</label>
+                  <div class="col-sm-10">
+                    <input type="text" 
+                    class="form-control" 
+                    id="inputNome" 
+                    placeholder="Nickname" 
+                    formControlName="nickname">
+                  </div>
+                </div>
+
+                <div class="form-group row">
+                  <label for="turma" class="col-sm-2 col-form-label">Turma</label>
+                  <div class="col-sm-10">
+                    <input type="text" 
+                    class="form-control" 
+                    id="inputTurma" 
+                    placeholder="Turma"
+                    formControlName="turma" 
+                    required>
+                  </div>
+                  <small *ngIf="turma.invalid && formDir.submitted" class="validationError" >
+                    <p *ngIf="turma.errors?.['required']">Turma é obrigatório.</p>
+                  </small>
+
+                </div>
+                <fieldset class="form-group formPadding">
+                  <div class="row">
+                    <legend class="col-form-label col-sm-12">Você já sofreu alguma forma de racismo.</legend>
+                    <div class="col-sm-10">
+                      <div class="form-check">
+                        <input class="form-check-input" 
+                        type="radio" 
+                        name="simOuNao" 
+                        id="gridRadios1" 
+                        value="sim"
+                        formControlName="simOuNao">
+                        <label class="form-check-label" for="gridRadios1">
+                          Sim
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" 
+                        type="radio" name="simOuNao" 
+                        id="gridRadios2" 
+                        value="nao"
+                        formControlName="simOuNao">
+                        <label class="form-check-label" for="gridRadios2">
+                          Não
+                        </label>
+                      </div>
+                      </div>
+                    </div>    
+                    <div *ngIf="simOuNao.value == 'sim'" class="form-group pt-2 ">
+                      <label for="descricao">Descrição</label>
+                      <textarea class="form-control" 
+                      id="exampleFormControlTextarea1" rows="3"
+                      formControlName="descricao" 
+                      required>
+                    </textarea>
+                    </div>
+
+                      <div class="row">
+                        <legend class="col-form-label col-sm-12">Você já presenciou alguma forma de racismo.</legend>
+                        <div class="col-sm-10">
+                          <div class="form-check">
+                            <input class="form-check-input" 
+                            type="radio" 
+                            name="simOuNao2" 
+                            id="gridRadios3" 
+                            value="sim"
+                            formControlName="simOuNao2" required>
+                            <label class="form-check-label" for="gridRadios3">
+                              Sim
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" 
+                            type="radio" name="simOuNao2" 
+                            id="gridRadios4" 
+                            value="nao"
+                            formControlName="simOuNao2">
+                            <label class="form-check-label" for="gridRadios4">
+                              Não
+                            </label>
+                          </div>
+                          </div>
+                        </div>    
+                        <div *ngIf="simOuNao2.value == 'sim'" class="form-group pt-2 ">
+                          <label for="descricao2">Descrição</label>
+                          <textarea class="form-control" 
+                          id="exampleFormControlTextarea1" rows="3"
+                          formControlName="descricao2" 
+                          required>
+                        </textarea>
+                        
+                       <!-- <small *ngIf="descricao2.invalid && formDir.submitted" class="validation-error" >
+                          <p *ngIf="descricao2.errors?.['required']">Descrição é obrigatório.</p>
+                        </small> -->
+                       
+    
+                        </div>
+                </fieldset>
+             
+                  <div class="form-group row">
+                    <div class="col-sm-10">
+                      <button type="submit" 
+                      class="btn btn-primary" (click)="onSubmit()">Enviar</button>
+                    </div>
+                  </div>
+                </form>
+        </section>
+    <app-footer></app-footer>
+</div>
