--- a/src/app/pages/relatos/relatos.component.html
+++ b/src/app/pages/relatos/relatos.component.html
@@ -1,1 +1,31 @@
-<p>relatos works!</p>
+<div class="BodyB">
+<app-header></app-header>
+
+<section>
+    <div style="height: 130px;">
+
+    </div>
+
+    <ng-template  [ngIf]="isLoading">
+      <ng-template ngFor let-turma7c  [ngForOf]="apiGetTurma7c">
+        <div class="card cardXY" *ngIf="turma7c">
+              <h3 class="card-header bg-primary text-white"> {{turma7c.id}} Relato</h3>
+              <div class="card-body">
+              <small> {{ turma7c.turma }} </small>
+              <h2 *ngIf="turma7c.nome && turma7c.nickname == '' " class="card-title">{{ turma7c.nome }}</h2>
+              <h2 *ngIf="turma7c.nickname" class="card-title">{{ turma7c.nickname }}</h2>
+              <p class="card-text">{{ turma7c.descricao }}</p>
+              <p class="card-text">{{ turma7c.descricao2 }}</p>
+              <a href="#" class="btn btn-primary">Voltar</a>
+              </div>
+        </div>
+      </ng-template>
+  </ng-template>
+
+  </section>
+
+ <!-- <img src="../../../assets/img/3828537.jpg" alt="Deu erro" style="height: 50%; width: 50%;"
+   class="error"> -->
+
+<app-footer></app-footer>
+</div>
