--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+
+@use './app/pages/home/home.component.scss';
+
+
+html, body{
+	height: 100%;
+	overflow-x: hidden
+}
+
+#home{
+    height: 94%;
+	overflow-x: hidden
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
