Atualização do Projeto -  Build

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -65,7 +65,7 @@
                 </div>
                 <fieldset class="form-group formPadding">
                   <div class="row">
-                    <legend class="col-form-label col-sm-12">Você já sofreu alguma forma de racismo.</legend>
+                    <legend class="col-form-label col-sm-12">Você já sofreu alguma forma de racismo?.</legend>
                     <div class="col-sm-10">
                       <div class="form-check">
                         <input class="form-check-input" 
@@ -100,7 +100,7 @@
                     </div>
 
                       <div class="row">
-                        <legend class="col-form-label col-sm-12">Você já presenciou alguma forma de racismo.</legend>
+                        <legend class="col-form-label col-sm-12">Você já presenciou alguma forma de racismo?</legend>
                         <div class="col-sm-10">
                           <div class="form-check">
                             <input class="form-check-input" 
