--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,24 +1,24 @@
 <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2 mb-2">
           <img src="../../../assets/img/diversity.png" width="142" height="140">
         </div>
         <div class="col-md-2">
           <h4>TRABALHO</h4>
-          <h4>TURMA 7ºC</h4>
+          <h4 class="clube">CLUBE DE CIÊNCIAS</h4>
           <ul class="navbar-nav">
-            <li><p>CALEBE</p></li>
-            <li><p>HADASSA</p></li>
-            <li><p>EMANUELLY</p></li>
-            <li><p>AMANDA</p></li>
-            <li><p class="mb-2">BEATRIZ</p></li>
+            <li><p>SILVA, Calebe</p></li>
+            <li><p>PILLONI, Carlos</p></li>
+            <li><p>FILHO, Rafael</p></li>
+            <li><p>MORAIS, Pablo</p></li>
           </ul>
         </div>
         <div class="col-md-2">
-          <h4>PROFESSOR</h4>
+          <h4>PROFESSORES</h4>
           <ul class="navbar-nav">
-            <li><p class="mb-2">MICHEL</p></li>
+            <li><p class="mb-2">ARAUJO, Michel</p></li>
+            <li><p class="mb-2">SCHWAB, Pamela</p></li>
           </ul>
         </div>
         <div class="col-md-2">
