--- a/src/app/shared/section-carrossel/section-carrossel.component.html
+++ b/src/app/shared/section-carrossel/section-carrossel.component.html
@@ -1,18 +1,18 @@
 <section id="home" class="d-flex"><!--home -->
- 
+
     <div class="container align-self-center"><!--container -->
       <div class="row"><!--row -->
         <div class="col-md-12">
-          
-          
+
+
             <div class="card mb-3">
               <img class="card-img-top imgtopp" src="../../../assets/img/logovivi.jpeg" alt="Imagem de capa do card">
               <div class="card-body">
-                <h5 class="card-title">RELATO SOBRE A ESCOLA E A COMUNIDADE EM QUE ESTÁ INSERIDA</h5>
+                <h5 class="card-title">SOBRE A ESCOLA E A COMUNIDADE EM QUE ESTÁ INSERIDA</h5>
                 <p class="card-text">A Escola Estadual Professor Luiz Viviani Filho, localizada à Rua Reinaldo Pizzani, 580, Cidade Aracy II, em São Carlos, iniciou suas atividades no PEI (Programa de Ensino Integral) no ano de 2021. Este novo modelo é um desafio e uma oportunidade, sendo o primeiro uma aprendizagem conjunta e coletiva para a Equipe e o segundo uma forma de melhorar, potencializar e colaborar na formação das crianças, adolescentes e jovens da comunidade como protagonistas do conhecimento, solidários e competentes. Este modelo permite que o aluno tenha maior corresponsabilidade na aprendizagem e no avanço de sua formação e dos colegas, permite também que os alunos considerem a escola não apenas como espaço de aprendizagem, como também de lazer, cultura e prática desportiva. A comunidade em que a escola está inserida é considerada de baixa renda, desta maneira há também a preocupação com o fluxo e a permanência dos alunos, principalmente no Ensino Médio, visto que muitos alunos buscam o mercado informal de trabalho, fato que atrapalha a dedicação ao estudo. A Escola tem, desde 2020, o Ensino Técnico em parceria com o Centro Paula Souza – NOVOTEC – desta forma torna-se uma preparação para o mercado de trabalho e uma real proximidade com o cotidiano. </p>
               </div>
             </div>
-       
+
         </div>
       </div><!--/row -->
     </div><!--/container -->
