--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -25,7 +25,11 @@ nav.navbar-transparente {
 	margin: 12px 15px;
 }
 
-small,.h2Clas, li{
+.h2Class{
+  color: #00FFFF;
+}
+
+small, li{
 	color: white;
 }
 
