--- a/src/app/shared/section-conteudo/section-conteudo.component.html
+++ b/src/app/shared/section-conteudo/section-conteudo.component.html
@@ -5,30 +5,30 @@
         <div class="col-md-6">
           <div class="row albuns">
             <div class="col-md-6">
-              <img src="../../../assets/img/hands.png" class="img-fluid" alt="Mãos entrelaçadas">
+              <img src="./assets/img/hands.png" class="img-fluid" alt="Mãos entrelaçadas">
             </div>
             <div class="col-md-6">
-              <img src="../../../assets/img/common-1300520_640.png" class="img-fluid">
+              <img src="./assets/img/common-1300520_640.png" class="img-fluid">
             </div>
           </div>
           <div class="row albuns">
             <div class="col-md-6">
-              <img src="../../../assets/img/circle.png" class="img-fluid">
+              <img src="./assets/img/circle.png" class="img-fluid">
             </div>
             <div class="col-md-6">
-              <img src="../../../assets/img/diversity1.jpg" class="img-fluid">
+              <img src="./assets/img/diversity1.jpg" class="img-fluid">
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          
+
           <h2>Você sabe o que é racismo?</h2>
 
-         
+
           <p>O Racismo é a crença em que uma raça, etnia ou certas características físicas sejam superiores a outras.</p>
           <p>O racismo pode se manifestar tanto em nível individual, como em nível institucional, através de políticas como a escravidão, o apartheid, o holocausto, o colonialismo, o imperialismo, dentre outros.</p>
 
-          
+
           <p>Embora o racismo associe-se ao preconceito contra os negros, ele pode se manifestar contra qualquer raça ou etnia, sejam asiáticos, indígenas, etc.</p>
 
         </div>
@@ -43,7 +43,7 @@
         <div class="col-md-4">
 
           <h3>Racismo Estrutural</h3>
-         
+
           <p>O <strong> racismo estrutural</strong> é um problema que afeta a sociedade há séculos. Ele se refere às práticas discriminatórias que são enraizadas nas estruturas sociais, políticas e econômicas de um país. Esse tipo de racismo não é apenas uma questão individual, mas sim um problema sistêmico que afeta a vida de milhões de pessoas em todo o mundo. O racismo estrutural é perpetuado por meio de políticas públicas, leis e práticas que discriminam as pessoas com base em sua cor de pele, origem étnica, religião ou outras características. É importante reconhecer que o racismo estrutural não é apenas uma questão de tom de voz ou de palavras ofensivas, mas sim um problema estrutural que precisa ser abordado de forma sistemática e com políticas públicas voltadas para a igualdade e a justiça.
           </p>
 
@@ -51,10 +51,10 @@
         <div class="col-md-8">
           <div class="row rotacionar">
             <div class="col-md-6">
-              <img src="../../../assets/img/iphone1.png" class="img-fluid">
+              <img src="./assets/img/iphone1.png" class="img-fluid">
             </div>
             <div class="col-md-6">
-              <img src="../../../assets/img/iphone2.png" class="img-fluid">
+              <img src="./assets/img/iphone2.png" class="img-fluid">
             </div>
           </div>
         </div>
@@ -87,9 +87,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-12">
-          
+
                     <h3 class="wte">Legislação de combate ao racismo</h3>
-                   
+
                     <p class="wte">"Por que a representatividade importa: a importância das cotas raciais nas universidades"
                       Neste post, podemos abordar a questão da representatividade e como ela é fundamental para combater o racismo. Podemos falar sobre a Lei nº 12.711/12, que instituiu as cotas raciais nas universidades, e como essa medida tem contribuído para aumentar a presença de estudantes negros e pardos no ensino superior. Também podemos destacar os desafios e críticas que essa política enfrenta.
                     </p>
