--- a/src/app/shared/section-conteudo/section-conteudo.component.html
+++ b/src/app/shared/section-conteudo/section-conteudo.component.html
@@ -5,18 +5,18 @@
         <div class="col-md-6">
           <div class="row albuns">
             <div class="col-md-6">
-              <img src="./assets/img/hands.png" class="img-fluid" alt="Mãos entrelaçadas">
+              <img src="./img/hands.png" class="img-fluid" alt="Mãos entrelaçadas">
             </div>
             <div class="col-md-6">
-              <img src="./assets/img/common-1300520_640.png" class="img-fluid">
+              <img src="./img/common-1300520_640.png" class="img-fluid">
             </div>
           </div>
           <div class="row albuns">
             <div class="col-md-6">
-              <img src="./assets/img/circle.png" class="img-fluid">
+              <img src="./img/circle.png" class="img-fluid">
             </div>
             <div class="col-md-6">
-              <img src="./assets/img/diversity1.jpg" class="img-fluid">
+              <img src="./img/diversity1.jpg" class="img-fluid">
             </div>
           </div>
         </div>
@@ -51,10 +51,10 @@
         <div class="col-md-8">
           <div class="row rotacionar">
             <div class="col-md-6">
-              <img src="./assets/img/iphone1.png" class="img-fluid">
+              <img src="./img/iphone1.png" class="img-fluid">
             </div>
             <div class="col-md-6">
-              <img src="./assets/img/iphone2.png" class="img-fluid">
+              <img src="./img/iphone2.png" class="img-fluid">
             </div>
           </div>
         </div>
