--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -16,30 +16,30 @@
   </div>
 
   <ul *ngIf="Slid1" class="list-group list-group-flush">
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide1.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide2.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide3.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide4.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide5.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide6.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide7.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide8.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide1.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide2.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide3.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide4.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide5.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide6.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide7.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide8.JPG" alt=""> </li>
   </ul>
 
   <ul *ngIf="Slid2" class="list-group list-group-flush">
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide9.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide10.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide11.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide12.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide13.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide14.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide15.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide16.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide17.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide18.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide19.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide20.JPG" alt=""> </li>
-    <li class="list-group-item"> <img src="./../../../assets/img/Slide21.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide9.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide10.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide11.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide12.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide13.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide14.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide15.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide16.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide17.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide18.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide19.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide20.JPG" alt=""> </li>
+    <li class="list-group-item"> <img src="./img/Slide21.JPG" alt=""> </li>
   </ul>
 
 
