--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2 mb-2">
-          <img src="../../../assets/img/diversity.png" width="142" height="140">
+          <img src="./img/diversity.png" width="142" height="140">
         </div>
         <div class="col-md-2">
           <h4>TRABALHO</h4>
