--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -7,22 +7,25 @@
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./../../../assets/img/WhatsApp Image 2023-10-19 at 18.38.59.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+        <img src="/img/clubeciencias.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./../../../assets/img/WhatsApp Image 2023-10-19 at 18.38.55.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+        <img src="./img/WhatsApp Image 2023-10-19 at 18.38.59.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./../../../assets/img/WhatsApp Image 2023-10-19 at 18.38.55 (2).jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+        <img src="./img/WhatsApp Image 2023-10-19 at 18.38.55.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./../../../assets/img/WhatsApp Image 2023-10-19 at 18.38.56 (1).jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+        <img src="./img/WhatsApp Image 2023-10-19 at 18.38.55 (2).jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./../../../assets/img/WhatsApp Image 2023-10-19 at 18.39.01 (1).jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+        <img src="./img/WhatsApp Image 2023-10-19 at 18.38.56 (1).jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./../../../assets/img/WhatsApp Image 2023-10-19 at 18.38.57.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+        <img src="./img/WhatsApp Image 2023-10-19 at 18.39.01 (1).jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./img/WhatsApp Image 2023-10-19 at 18.38.57.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
       </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -37,7 +40,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 pdf">
-        <embed src="./../../../assets/BANNER MATRIX_Feira de Ciências 2023.pdf" type='application/pdf'>
+        <img class="embed" src="./img/Banner.png" >
       </div>
     </div>
   </div>
