--- a/src/app/pages/sobre/sobre.component.scss
+++ b/src/app/pages/sobre/sobre.component.scss
@@ -10,7 +10,7 @@ background-image: url(./../../../assets/img/people.png);
 }
 
 .carousel-item{
-  width: 80%;
+  width: 70%;
 
 }
 
@@ -24,7 +24,7 @@ background-image: url(./../../../assets/img/people.png);
     justify-content: center;
   }
 
-  embed{
+  .embed{
     width: 920px;
     height: 1200px;
     margin-top: 5px;
