--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -7,7 +7,7 @@
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/img/clubeciencias.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
+        <img src="./img/clubeciencias.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
         <img src="./img/WhatsApp Image 2023-10-19 at 18.38.59.jpeg" class="imgCont d-block w-100 img-fluid" alt="...">
