--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -30,10 +30,10 @@
         <div class="col-md-4">
           <ul>
             <li>
-              <a href="https://www.facebook.com/profile.php?id=100017279237319" target="_blank"><img src="../../../assets/img/facebook.png"></a>
+              <a href="https://www.facebook.com/profile.php?id=100017279237319" target="_blank"><img src="./img/facebook.png"></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/pei.luizviviani/" target="_blank"><img src="../../../assets/img/instagram.png"></a>
+              <a href="https://www.instagram.com/pei.luizviviani/" target="_blank"><img src="./img/instagram.png"></a>
             </li>
           </ul>
         </div>
