--- a/src/app/pages/sobre/sobre.component.scss
+++ b/src/app/pages/sobre/sobre.component.scss
@@ -25,8 +25,8 @@ background-image: url(./../../../assets/img/people.png);
   }
 
   .embed{
-    width: 920px;
-    height: 1200px;
+    width: 90%;
+    //height: 1200px;
     margin-top: 5px;
     margin-bottom: 20px;
   }
